# parking-detector

./: .gitignore  README.md  pyproject.toml  start_app.sh
data/: parking_spots.json
forms/: ui_main.ui
src/parking_detect/: run.py
src/parking_detect/application/: application_controller.py
src/parking_detect/data/: frame_processor.py
src/parking_detect/infrastructure/repository/: json_parking_repository.py
src/parking_detect/presentation/ui/: main_window.py
src/parking_detect/presentation/views/: ui_main.py
src/parking_detect/services/: analize.py
