[project]
name = "parking-detect"
version = "0.1.0"
description = ""
authors = [
    {name = "n1ghtmare-dev",email = "oboev3691@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "parking_detect", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
